# editions

./: .gitignore  .solitarc.js  Anchor.toml  Cargo.toml  README.md  package.json
editions/program/: Cargo.toml
editions/program/src/: lib.rs  state.rs  utils.rs
editions/program/src/processor/: create_token_parameters.rs  mod.rs  primary_sale.rs  update_token_parameters.rs
editions/typescript/: index.ts
editions/typescript/accounts/: PlatformSettings.ts  PrimarySaleReceipt.ts  TokenParameters.ts
editions/typescript/instructions/: createTokenParameters.ts  primarySale.ts  updateTokenParameters.ts
editions/typescript/src/: EditionsProgram.ts  editions.ts
programs/editions/: Cargo.toml
programs/editions/src/: error.rs
programs/editions/src/processor/: create_platform_settings.rs  update_token_parameters.rs
tests/: editions.ts
